k8s/base/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-management
spec:
  selector:
    app: school-management
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
