k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-management-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: school-management
            port:
              number: 80
  - host: school-management.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: school-management
            port:
              number: 80
